--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^5.6.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-progressive-image": "^0.6.0",
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.48.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
